--- a/sport_with_mimi/build.gradle
+++ b/sport_with_mimi/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         
     }
     dependencies {
@@ -13,7 +14,10 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
-
+ext{
+    roomVersion = '1.1.1'
+    archLifeCycleVersion = '1.1.1'
+}
 allprojects {
     repositories {
         google()
